--- a/index.html
+++ b/index.html
@@ -350,50 +350,48 @@
 
 
   
-<div class="activity-card" style="max-width: 900px; background: #ffffff; border-radius: 12px; border: 1px solid #e2e8f0; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05); overflow: hidden; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="padding: 16px 20px; display: flex; align-items: center; justify-content: space-between; gap: 15px; flex-wrap: nowrap;">
+<div class="activity-card" style="max-width: 900px; margin: 20px auto; background: #ffffff; border-radius: 12px; border: 1px solid #e2e8f0; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05); overflow: hidden; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; box-sizing: border-box;">
+  <div style="padding: 14px 20px; display: flex; align-items: center; justify-content: space-between; gap: 15px; flex-wrap: nowrap;">
     
-    <div style="display: flex; align-items: center; gap: 15px; flex: 1;">
-      <div style="display: flex; align-items: center; gap: 6px; background: #0c2340; padding: 4px 10px; border-radius: 4px; flex-shrink: 0;">
+    <div style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 0;">
+      <div style="display: flex; align-items: center; gap: 6px; background: #0c2340; padding: 5px 10px; border-radius: 4px; flex-shrink: 0;">
         <span style="width: 5px; height: 5px; background-color: #10b981; border-radius: 50%;"></span>
         <span style="color: #ffffff; font-size: 9px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">IN PROGRESS</span>
       </div>
-      <div style="min-width: 0;">
-        <div style="display: flex; align-items: baseline; gap: 8px;">
-          <span style="color: #0c2340; font-weight: 900; font-size: 15px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">Compadres Collegiate</span>
+      <div style="overflow: hidden;">
+        <div style="display: flex; align-items: baseline; gap: 6px;">
+          <span style="color: #0c2340; font-weight: 900; font-size: 16px; white-space: nowrap;">Compadres Collegiate</span>
           <span style="color: #94a3b8; font-size: 11px; font-weight: 700; flex-shrink: 0;">(Feb 1-3)</span>
         </div>
         <span style="color: #64748b; font-size: 11px; font-weight: 600; display: block; margin-top: 1px;">Iberostar Playa Paraiso, Mexico</span>
       </div>
     </div>
 
-    <div style="display: flex; align-items: center; gap: 20px; flex-shrink: 0;">
-      <div style="text-align: right; border-right: 1px solid #e2e8f0; padding-right: 20px;">
-        <div style="display: flex; flex-direction: column; gap: 2px;">
-          <div style="display: flex; align-items: center; justify-content: flex-end; gap: 10px;">
-            <span style="color: #94a3b8; font-size: 9px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">R1-R2-R3</span>
-            <div style="display: flex; align-items: center; gap: 6px; min-width: 75px; justify-content: flex-end;">
-              <span style="color: #e74c3c; font-size: 14px; font-weight: 900;">70</span>
-              <span style="color: #cbd5e1; font-size: 14px; font-weight: 400;">—</span>
-              <span style="color: #cbd5e1; font-size: 14px; font-weight: 400;">—</span>
-            </div>
+    <div style="display: flex; align-items: center; gap: 24px; flex-shrink: 0;">
+      <div style="display: flex; flex-direction: column; gap: 4px; border-right: 1px solid #f1f5f9; padding-right: 24px;">
+        <div style="display: flex; justify-content: flex-end; gap: 25px;">
+          <span style="color: #94a3b8; font-size: 9px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px; width: 80px; text-align: right;">R1 - R2 - R3</span>
+          <span style="color: #94a3b8; font-size: 9px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px; width: 65px; text-align: right;">PAR / TOTAL</span>
+        </div>
+        <div style="display: flex; justify-content: flex-end; gap: 25px; align-items: center;">
+          <div style="display: flex; gap: 8px; width: 80px; justify-content: flex-end;">
+            <span style="color: #e74c3c; font-size: 15px; font-weight: 900;">70</span>
+            <span style="color: #cbd5e1; font-size: 15px; font-weight: 400;">—</span>
+            <span style="color: #cbd5e1; font-size: 15px; font-weight: 400;">—</span>
           </div>
-          <div style="display: flex; align-items: center; justify-content: flex-end; gap: 10px;">
-            <span style="color: #94a3b8; font-size: 9px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">PAR / TOTAL</span>
-            <div style="display: flex; align-items: center; gap: 6px; min-width: 75px; justify-content: flex-end;">
-              <span style="color: #e74c3c; font-size: 14px; font-weight: 900;">-2</span>
-              <span style="color: #0c2340; font-size: 14px; font-weight: 900;">(70)</span>
-            </div>
+          <div style="display: flex; gap: 5px; width: 65px; justify-content: flex-end;">
+            <span style="color: #e74c3c; font-size: 15px; font-weight: 900;">-2</span>
+            <span style="color: #0c2340; font-size: 15px; font-weight: 900;">(70)</span>
           </div>
         </div>
       </div>
 
-      <div style="display: flex; flex-direction: column; align-items: center; gap: 4px;">
-        <span style="color: #94a3b8; font-size: 8px; font-weight: 800; text-transform: uppercase;">RANK</span>
+      <div style="display: flex; flex-direction: column; align-items: center; gap: 2px;">
+        <span style="color: #94a3b8; font-size: 8px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">RANK</span>
         <div style="background: #0c2340; color: #ffffff; width: 28px; height: 28px; border-radius: 4px; display: flex; align-items: center; justify-content: center; font-size: 14px; font-weight: 900;">1</div>
       </div>
 
-      <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; width: 32px; height: 32px; border-radius: 6px; border: 1px solid #e2e8f0; background: #ffffff; transition: all 0.2s ease;">
+      <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; width: 32px; height: 32px; border-radius: 8px; border: 1px solid #e2e8f0; background: #ffffff; transition: all 0.2s ease;">
         <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
           <line x1="7" y1="17" x2="17" y2="7"></line>
           <polyline points="7 7 17 7 17 17"></polyline>
@@ -405,31 +403,28 @@
 </div>
 
 <style>
-  @media (max-width: 600px) {
+  @media (max-width: 768px) {
     .activity-card div[style*="flex-wrap: nowrap"] {
       flex-wrap: wrap !important;
-      padding: 15px !important;
+      padding: 12px 15px !important;
     }
     .activity-card div[style*="flex: 1"] {
       flex: 0 0 100% !important;
-      border-bottom: 1px solid #f1f5f9;
-      padding-bottom: 12px;
+      border-bottom: 1px solid #f8fafc;
+      padding-bottom: 10px;
+      margin-bottom: 5px;
     }
     .activity-card div[style*="flex-shrink: 0"] {
       width: 100% !important;
       justify-content: space-between !important;
-      gap: 10px !important;
     }
     .activity-card div[style*="border-right: 1px solid"] {
       border-right: none !important;
       padding-right: 0 !important;
-      text-align: left !important;
     }
-    .activity-card div[style*="justify-content: flex-end"] {
-      justify-content: flex-start !important;
-    }
-    .activity-card a[style*="width: 32px"] {
-      margin-left: auto;
+    .activity-card div[style*="width: 80px"], 
+    .activity-card div[style*="width: 65px"] {
+      width: auto !important;
     }
   }
 </style>
