--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -463,13 +463,13 @@
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">70</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-2</span></div>
-              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">-</span></div>
+              <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">1</span></div>
             </div>
           </td>
           <td class="hide-mobile under-par">70</td>
           <td class="hide-mobile under-par">-2</td>
           <td class="hide-mobile" style="font-size: 12px; color: #10b981; font-weight: 700;">FINISHED</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+          <td class="hide-mobile" style="color: #0c2340;">1</td>
         </tr>
 
         <tr>
