--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           </div>
           <div style="display: flex; gap: 6px; width: 70px; justify-content: flex-end;">
             <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">-2</span>
-            <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(70)</span>
+            <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">(70)</span>
           </div>
         </div>
       </div>
