--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -438,7 +438,7 @@
       </thead>
       <tbody>
 
-        <tr>
+      <tr>
           <td class="col-left">
             <div style="display: flex; align-items: center; gap: 8px;">
               <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1</div>
@@ -469,7 +469,7 @@
           <td class="hide-mobile under-par">70</td>
           <td class="hide-mobile under-par">-2</td>
           <td class="hide-mobile" style="font-size: 12px; color: #10b981; font-weight: 700;">FINISHED</td>
-          <td class="hide-mobile" style="color: #0c2340;">1</td>
+          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">1</td>
         </tr>
 
         <tr>
