--- a/index.html
+++ b/index.html
@@ -378,9 +378,9 @@
 
   
 <div class="activity-card" style="max-width: 900px; margin: 20px auto; background: #ffffff; border-radius: 14px; border: 2.5px solid #0c2340; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08); overflow: hidden; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; box-sizing: border-box;">
-  <div style="padding: 14px 20px; display: flex; align-items: center; justify-content: space-between; gap: 15px; flex-wrap: nowrap;">
+  <div class="card-content" style="padding: 14px 20px; display: flex; align-items: center; justify-content: space-between; gap: 15px;">
     
-    <div style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 0;">
+    <div class="tournament-info" style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 0;">
       <div style="display: flex; align-items: center; gap: 6px; background: #0c2340; padding: 6px 12px; border-radius: 6px; flex-shrink: 0;">
         <span style="width: 6px; height: 6px; background-color: #10b981; border-radius: 50%;"></span>
         <span style="color: #ffffff; font-size: 10px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">IN PROGRESS</span>
@@ -394,8 +394,8 @@
       </div>
     </div>
 
-    <div style="display: flex; align-items: center; gap: 24px; flex-shrink: 0;">
-      <div style="display: flex; flex-direction: column; gap: 4px; border-right: 1px solid #f1f5f9; padding-right: 24px;">
+    <div class="stats-container" style="display: flex; align-items: center; gap: 24px; flex-shrink: 0;">
+      <div class="score-box" style="display: flex; flex-direction: column; gap: 4px; border-right: 1px solid #f1f5f9; padding-right: 24px;">
         <div style="display: flex; justify-content: flex-end; gap: 30px;">
           <span style="color: #94a3b8; font-size: 9px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.8px; width: 85px; text-align: right;">R1 - R2 - R3</span>
           <span style="color: #94a3b8; font-size: 9px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.8px; width: 70px; text-align: right;">PAR / TOTAL</span>
@@ -413,7 +413,7 @@
         </div>
       </div>
 
-      <div style="display: flex; flex-direction: column; align-items: center; gap: 3px;">
+      <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 3px;">
         <span style="color: #94a3b8; font-size: 8px; font-weight: 800; text-transform: uppercase; letter-spacing: 0.5px;">RANK</span>
         <div style="background: #0c2340; color: #ffffff; width: 30px; height: 30px; border-radius: 5px; display: flex; align-items: center; justify-content: center; font-size: 15px; font-weight: 900;">1</div>
       </div>
@@ -427,6 +427,46 @@
     </div>
   </div>
 </div>
+
+<style>
+  /* 모바일 최적화 수정 */
+  @media (max-width: 768px) {
+    .card-content {
+      flex-direction: column !important;
+      align-items: flex-start !important;
+      padding: 16px !important;
+      gap: 16px !important;
+    }
+    .tournament-info {
+      width: 100% !important;
+      flex: none !important;
+      padding-bottom: 12px !important;
+      border-bottom: 1px solid #f1f5f9 !important;
+    }
+    .stats-container {
+      width: 100% !important;
+      justify-content: space-between !important;
+      gap: 10px !important;
+    }
+    .score-box {
+      border-right: none !important;
+      padding-right: 0 !important;
+      align-items: flex-start !important;
+    }
+    .score-box > div {
+      justify-content: flex-start !important;
+    }
+    .score-box span[style*="text-align: right"] {
+      text-align: left !important;
+    }
+    .score-box div[style*="justify-content: flex-end"] {
+      justify-content: flex-start !important;
+    }
+    .rank-box {
+      margin-left: auto !important;
+    }
+  }
+</style>
 
 
 
