--- a/index.html
+++ b/index.html
@@ -357,27 +357,24 @@
   
   
 
-  <a href="./ncaa-stats.html#current-focus" style="text-decoration: none; display: block;">
-    <div class="focus-container">
-      <div class="focus-content">
-        <div class="focus-badge">
-          <span class="focus-pulse"></span>
-          Current Focus
-        </div>
-        <div class="focus-text-wrapper" title="Recalibrating putting touch & driver alignment for Cancun (Travel Squad).">
-          <span class="focus-text">
-            Recalibrating putting touch & driver alignment for Cancun (Travel Squad).
-          </span>
-        </div>
+<a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="focus-container">
+    <div style="display: flex; align-items: center; gap: 16px; flex: 1;">
+      <div class="focus-badge">
+        <span class="status-dot" style="background: #10b981;"></span>
+        CURRENT FOCUS
       </div>
-      <div class="focus-arrow-svg">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
-          <line x1="7" y1="17" x2="17" y2="7"></line>
-          <polyline points="7 7 17 7 17 17"></polyline>
-        </svg>
+      <div style="color: #475569; font-size: 14px; font-weight: 700;">
+        Recalibrating putting touch & driver alignment for Cancun (Travel Squad).
       </div>
     </div>
+    <div class="focus-arrow-svg">
+      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="7" y1="17" x2="17" y2="7"></line>
+        <polyline points="7 7 17 7 17 17"></polyline>
+      </svg>
+    </div>
   </a>
+
 </div>
 
 
