--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
             </div>
             <div style="display: flex; gap: 6px; width: 70px; justify-content: flex-end;">
               <span class="under-par" style="font-size: 16px;">-2</span>
-              <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(70)</span>
+              <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">(70)</span>
             </div>
           </div>
         </div>
