--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -468,14 +468,24 @@
           </td>
           <td class="hide-mobile under-par">70</td>
           <td class="hide-mobile under-par">-2</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #10b981; font-weight: 700;">FINISHED</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
           <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">1</td>
         </tr>
 
-        <tr>
+      <tr>
           <td class="col-left">
-            <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div>
-            <div style="font-size: 11px; color: #7f8c8d;">Feb 2, 2026</div>
+            <div style="display: flex; align-items: center; gap: 8px;">
+              <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2</div>
+              <div class="pairing-btn" onclick="openPairing('./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-2026-Spring-Opner-UTRGV-pairing2.jpeg')">
+                <span>Pairing</span>
+                <svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M15 3h6v6"></path>
+                  <path d="M10 14L21 3"></path>
+                  <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                </svg>
+              </div>
+            </div>
+            <div style="font-size: 11px; color: #7f8c8d; margin-top: 2px;">Feb 2, 2026</div>
             <div class="mobile-status-bar">
               <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value">-</span></div>
               <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">-</span></div>
@@ -484,7 +494,7 @@
           </td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-          <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Upcoming</td>
+          <td class="hide-mobile" style="font-size: 12px; color: #10b981; font-weight: 700;">IN PROGRESS</td>
           <td class="hide-mobile" style="color: #bdc3c7;">-</td>
         </tr>
 
