--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1537,14 +1537,15 @@
           <head>
             <title>Joshua Hong - Gallery</title>
             <style>
-              body { margin: 0; background: #000; color: white; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; font-family: sans-serif; overflow: hidden; }
-              #mainImg { max-width: 95%; max-height: 70vh; object-fit: contain; border-radius: 8px; transition: 0.2s; opacity: 1; box-shadow: 0 0 30px rgba(255,255,255,0.1); }
-              .nav-btn { position: absolute; top: 50%; transform: translateY(-50%); font-size: 70px; color: rgba(255,255,255,0.25); cursor: pointer; padding: 20px 30px; user-select: none; transition: 0.3s; z-index: 10; }
+              body { margin: 0; background: #000; color: white; display: flex; flex-direction: column; align-items: center; justify-content: flex-start; min-height: 100vh; font-family: sans-serif; overflow-x: hidden; overflow-y: auto; padding: 40px 0; box-sizing: border-box; }
+              #imgContainer { width: 100%; display: flex; justify-content: center; align-items: center; position: relative; flex-grow: 1; }
+              #mainImg { max-width: 95%; max-height: 75vh; object-fit: contain; border-radius: 8px; transition: 0.2s; opacity: 1; box-shadow: 0 0 30px rgba(255,255,255,0.1); }
+              .nav-btn { position: fixed; top: 50%; transform: translateY(-50%); font-size: 70px; color: rgba(255,255,255,0.25); cursor: pointer; padding: 20px 30px; user-select: none; transition: 0.3s; z-index: 10; }
               .nav-btn:hover { color: #fff; background: rgba(255,255,255,0.1); }
               #prev { left: 0; } #next { right: 0; }
-              #close-x { position: absolute; top: 20px; right: 20px; font-size: 45px; cursor: pointer; opacity: 0.6; z-index: 20; transition: 0.3s; line-height: 1; }
+              #close-x { position: fixed; top: 20px; right: 20px; font-size: 45px; cursor: pointer; opacity: 0.6; z-index: 20; transition: 0.3s; line-height: 1; }
               #close-x:hover { opacity: 1; transform: rotate(90deg); }
-              .bottom-controls { position: absolute; bottom: 30px; display: flex; flex-direction: column; align-items: center; gap: 12px; }
+              .bottom-controls { margin-top: 30px; display: flex; flex-direction: column; align-items: center; gap: 12px; width: 100%; padding-bottom: 20px; }
               .close-btn-bottom { background: #fff; color: #000; border: none; padding: 12px 40px; border-radius: 30px; font-weight: 800; font-size: 14px; cursor: pointer; letter-spacing: 1px; transition: 0.3s; }
               .close-btn-bottom:hover { background: #ff4d4d; color: #fff; }
               .counter { font-size: 14px; opacity: 0.5; letter-spacing: 2px; }
@@ -1554,7 +1555,9 @@
           <body>
             <div id="close-x" onclick="window.close()">×</div>
             <div id="prev" class="nav-btn" onclick="move(-1)">❮</div>
-            <img id="mainImg" src="${allImages[index]}">
+            <div id="imgContainer">
+              <img id="mainImg" src="${allImages[index]}">
+            </div>
             <div id="next" class="nav-btn" onclick="move(1)">❯</div>
             <div class="bottom-controls">
               <button class="close-btn-bottom" onclick="window.close()">CLOSE</button>
