--- a/news-media.html
+++ b/news-media.html
@@ -229,13 +229,18 @@
 
   <div style="font-family: 'Segoe UI', Arial, sans-serif; max-width: 850px; width: 100%; margin: auto; padding: 20px; color: #333; background-color: #ffffff; box-sizing: border-box;">
     
-    <div style="border-bottom: 2px solid #0c2340; padding-bottom: 12px; margin-bottom: 40px;">
-      <h2 style="margin: 0; color: #0c2340; font-size: 20px; font-weight: 700; letter-spacing: 0.3px;">
-        MEDIA COVERAGE & INTERVIEWS
-      </h2>
-      <p style="margin: 8px 0 0; color: #666; font-size: 14px;">
-        Featured interviews, official news, and video highlights
-      </p>
+<div style="border-bottom: 2px solid #0c2340; padding-bottom: 12px; margin-bottom: 40px; display: flex; justify-content: space-between; align-items: flex-end;">
+      <div>
+        <h2 style="margin: 0; color: #0c2340; font-size: 20px; font-weight: 700; letter-spacing: 0.3px;">
+          MEDIA COVERAGE & INTERVIEWS
+        </h2>
+        <p style="margin: 8px 0 0; color: #666; font-size: 14px;">
+          Featured interviews, official news, and video highlights
+        </p>
+      </div>
+      <div style="color: #94a3b8; font-size: 13px; font-weight: 700; font-family: 'Segoe UI', sans-serif; letter-spacing: 0.5px;">
+        Feb 1, 2026
+      </div>
     </div>
 
     <div style="margin-bottom: 50px;">
