--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -536,18 +536,19 @@
   100% { opacity: 1; transform: scale(1); }
 }
 </style>
-    <div style="text-align: right;">
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
-    </div>
-    <div style="text-align: right;">
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Par</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
-    </div>
-    <div style="text-align: right;">
-      <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Rank</span>
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-</span>
-    </div>
+    
+<div style="display: flex; gap: 15px;">
+  <div style="text-align: right;">
+    <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
+    <span style="color: #ffffff; font-size: 18px; font-weight: 900;">70</span>
+  </div>
+  <div style="text-align: right;">
+    <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Par</span>
+    <span style="color: #ff4d4d; font-size: 18px; font-weight: 900;">-2</span>
+  </div>
+  <div style="text-align: right;">
+    <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Rank</span>
+    <span style="color: #0c2340; font-size: 18px; font-weight: 900;">1</span>
   </div>
 </div>
   
