--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -541,7 +541,7 @@
 
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
 
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">70</span>
+      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">70</span>
 
     </div>
 
@@ -549,7 +549,7 @@
 
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Cur. Par</span>
 
-      <span style="color: #ffffff; font-size: 18px; font-weight: 900;">-2</span>
+      <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">-2</span>
 
     </div>
 
