--- a/index.html
+++ b/index.html
@@ -11,6 +11,30 @@
   <title>Joshua Hong | Korean-Mexican NCAA D1 Golfer | UTSA Official Site</title>
   <meta name="description" content="Official site of Joshua Hong, a Korean-Mexican NCAA Division I golfer at UTSA. Explore career records, tournament highlights, and latest media coverage.">
   <link rel="canonical" href="https://www.joshuahonggolf.com/index.html">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  // Google Analytics 4 Configuration
+  gtag('config', 'G-H1JW8YBDZ8', {
+    'page_title': 'Joshua Hong Official Site',
+    'send_page_view': true,
+    'cookie_flags': 'SameSite=None;Secure'
+  });
+
+  // Bookmark & Return Visitor Tracking Logic
+  if (window.performance && window.performance.navigation.type === 0) {
+    // Type 0: Direct access (Potential Bookmark or URL entry)
+    gtag('event', 'visitor_entry', {
+      'method': 'direct_or_bookmark',
+      'event_category': 'Engagement',
+      'event_label': 'Direct Access Tracking'
+    });
+  }
+</script>
   
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-H1JW8YBDZ8"></script>
   <script>
