--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -523,10 +523,10 @@
               <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">T2</span></div>
             </div>
           </td>
-          <td class="hide-mobile" style="color: #bdc3c7;">75</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">+3</td>
+          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">75</td>
+          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">+3</td>
           <td class="hide-mobile" style="font-size: 12px; color: #95a5a6; font-weight: 700;">FINISHED</td>
-          <td class="hide-mobile" style="color: #bdc3c7;">T2</td>
+          <td class="hide-mobile" style="color: #0c2340; font-weight: 900; font-size: 15px;">T2</td>
         </tr>
 
         <tr>
