--- a/index.html
+++ b/index.html
@@ -414,19 +414,19 @@
           <div style="display: flex; justify-content: flex-end; gap: 30px; align-items: center;">
             <div style="display: flex; gap: 10px; width: 85px; justify-content: flex-end;">
               <span class="under-par" style="font-size: 16px;">70</span>
-              <span style="color: #cbd5e1; font-size: 16px;">—</span>
+              <span style="color: #cbd5e1; font-size: 16px;">—75</span>
               <span style="color: #cbd5e1; font-size: 16px;">—</span>
             </div>
             <div style="display: flex; gap: 6px; width: 70px; justify-content: flex-end;">
-              <span class="under-par" style="font-size: 16px;">-2</span>
-              <span style="color: #e74c3c; font-size: 16px; font-weight: 900;">(70)</span>
+               <span style="color: #cbd5e1; font-size: 16px;"+1</span>
+              <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(145)</span>
             </div>
           </div>
         </div>
         
         <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 34px;">
           <span style="color: #94a3b8; font-size: 8px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
-          <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">1</div>
+          <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">T2</div>
         </div>
 
         <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #e2e8f0; background: #ffffff;">
