--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
         </div>
       </div>
 
-      <div class="stats-container" style="display: flex; align-items: center; gap: 24px;">
+   <div class="stats-container" style="display: flex; align-items: center; gap: 24px;">
         <div class="score-group" style="display: flex; flex-direction: column; gap: 4px; border-right: 1px solid #f1f5f9; padding-right: 24px;">
           <div style="display: flex; justify-content: flex-end; gap: 30px;">
             <span style="color: #94a3b8; font-size: 9px; font-weight: 800; width: 85px; text-align: right;">R1 - R2 - R3</span>
@@ -413,12 +413,12 @@
           </div>
           <div style="display: flex; justify-content: flex-end; gap: 30px; align-items: center;">
             <div style="display: flex; gap: 10px; width: 85px; justify-content: flex-end;">
-              <span class="under-par" style="font-size: 16px;">70</span>
-              <span style="color: #cbd5e1; font-size: 16px;">—75</span>
+              <span class="under-par" style="font-size: 16px; color: #ff4d4d; font-weight: 700;">70</span>
+              <span style="color: #0c2340; font-size: 16px; font-weight: 700;">75</span>
               <span style="color: #cbd5e1; font-size: 16px;">—</span>
             </div>
             <div style="display: flex; gap: 6px; width: 70px; justify-content: flex-end;">
-               <span style="color: #cbd5e1; font-size: 16px;"+1</span>
+               <span style="color: #0c2340; font-size: 16px; font-weight: 700;">+1</span>
               <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(145)</span>
             </div>
           </div>
