--- a/index.html
+++ b/index.html
@@ -405,36 +405,40 @@
         </div>
       </div>
 
-   <div class="stats-container" style="display: flex; align-items: center; gap: 24px;">
-        <div class="score-group" style="display: flex; flex-direction: column; gap: 4px; border-right: 1px solid #f1f5f9; padding-right: 24px;">
-          <div style="display: flex; justify-content: flex-end; gap: 30px;">
-            <span style="color: #94a3b8; font-size: 9px; font-weight: 800; width: 85px; text-align: right;">R1 - R2 - R3</span>
-            <span style="color: #94a3b8; font-size: 9px; font-weight: 800; width: 70px; text-align: right;">PAR / TOTAL</span>
-          </div>
-          <div style="display: flex; justify-content: flex-end; gap: 30px; align-items: center;">
-            <div style="display: flex; gap: 10px; width: 85px; justify-content: flex-end;">
-              <span class="under-par" style="font-size: 16px; color: #ff4d4d; font-weight: 700;">70</span>
-              <span style="color: #0c2340; font-size: 16px; font-weight: 700;">75</span>
-              <span style="color: #cbd5e1; font-size: 16px;">—</span>
-            </div>
-            <div style="display: flex; gap: 6px; width: 70px; justify-content: flex-end;">
-               <span style="color: #0c2340; font-size: 16px; font-weight: 700;">+1</span>
-              <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(145)</span>
-            </div>
-          </div>
-        </div>
-        
-        <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 34px;">
-          <span style="color: #94a3b8; font-size: 8px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
-          <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">T2</div>
-        </div>
-
-        <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #e2e8f0; background: #ffffff;">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
-            <line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline>
-          </svg>
-        </a>
+  <div class="stats-container" style="display: flex; align-items: center; gap: 24px;">
+  <div class="score-group" style="display: flex; flex-direction: column; gap: 4px; border-right: 1px solid #f1f5f9; padding-right: 24px;">
+    <div style="display: flex; justify-content: flex-end; gap: 30px;">
+      <div style="display: flex; width: 85px; justify-content: space-between;">
+        <span style="color: #94a3b8; font-size: 9px; font-weight: 800;">R1</span>
+        <span style="color: #94a3b8; font-size: 9px; font-weight: 800;">R2</span>
+        <span style="color: #94a3b8; font-size: 9px; font-weight: 800;">R3</span>
       </div>
+      <span style="color: #94a3b8; font-size: 9px; font-weight: 800; width: 70px; text-align: right;">PAR / TOTAL</span>
+    </div>
+    <div style="display: flex; justify-content: flex-end; gap: 30px; align-items: center;">
+      <div style="display: flex; width: 85px; justify-content: space-between; align-items: center;">
+        <span class="under-par" style="font-size: 16px; color: #ff4d4d; font-weight: 700; min-width: 20px; text-align: center;">70</span>
+        <span style="color: #0c2340; font-size: 16px; font-weight: 700; min-width: 20px; text-align: center;">75</span>
+        <span style="color: #cbd5e1; font-size: 16px; min-width: 20px; text-align: center;">—</span>
+      </div>
+      <div style="display: flex; gap: 6px; width: 70px; justify-content: flex-end;">
+        <span style="color: #0c2340; font-size: 16px; font-weight: 700;">+1</span>
+        <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(145)</span>
+      </div>
+    </div>
+  </div>
+  
+  <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 34px;">
+    <span style="color: #94a3b8; font-size: 8px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
+    <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">T2</div>
+  </div>
+
+  <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #e2e8f0; background: #ffffff;">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="7" y1="17" x2="17" y2="7"></line><polyline points="7 7 17 7 17 17"></polyline>
+    </svg>
+  </a>
+</div>
     </div>
   </div>
 
