--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
 
 
-  <div style="max-width: 900px; margin: 0 auto 30px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+ <div style="max-width: 900px; margin: 0 auto 30px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <style>
     /* 1. Animations */
@@ -287,10 +287,9 @@
     .status-dot {
       width: 6px;
       height: 6px;
-      background-color: #10b981;
+      background-color: #ffffff;
       border-radius: 50%;
       display: inline-block;
-      animation: pulse-live 2s infinite ease-in-out;
     }
 
     /* 3. Focus Badge & Container */
@@ -392,9 +391,9 @@
   <div class="activity-card">
     <div class="activity-card-inner" style="padding: 14px 20px; display: flex; align-items: center; justify-content: space-between; gap: 15px;">
       <div class="tournament-info" style="display: flex; align-items: center; gap: 12px; flex: 1; min-width: 0;">
-        <div style="display: flex; align-items: center; gap: 6px; background: #0c2340; padding: 6px 12px; border-radius: 6px;">
+        <div style="display: flex; align-items: center; gap: 6px; background: #94a3b8; padding: 6px 12px; border-radius: 6px;">
           <span class="status-dot"></span>
-          <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">IN PROGRESS</span>
+          <span style="color: #ffffff; font-size: 10px; font-weight: 800; text-transform: uppercase;">FINAL</span>
         </div>
         <div>
           <div style="display: flex; align-items: baseline; gap: 6px;">
@@ -419,18 +418,18 @@
       <div style="display: flex; width: 85px; justify-content: space-between; align-items: center;">
         <span class="under-par" style="font-size: 16px; color: #ff4d4d; font-weight: 700; min-width: 20px; text-align: center;">70</span>
         <span style="color: #0c2340; font-size: 16px; font-weight: 700; min-width: 20px; text-align: center;">75</span>
-        <span style="color: #cbd5e1; font-size: 16px; min-width: 20px; text-align: center;">—</span>
+        <span class="under-par" style="font-size: 16px; color: #ff4d4d; font-weight: 700; min-width: 20px; text-align: center;">71</span>
       </div>
       <div style="display: flex; gap: 6px; width: 70px; justify-content: flex-end;">
-        <span style="color: #0c2340; font-size: 16px; font-weight: 700;">+1</span>
-        <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(145)</span>
+        <span style="color: #0c2340; font-size: 16px; font-weight: 700;">E</span>
+        <span style="color: #0c2340; font-size: 16px; font-weight: 900;">(216)</span>
       </div>
     </div>
   </div>
   
   <div class="rank-box" style="display: flex; flex-direction: column; align-items: center; gap: 2px; min-width: 34px;">
     <span style="color: #94a3b8; font-size: 8px; font-weight: 800; letter-spacing: 0.5px;">RANK</span>
-    <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">T2</div>
+    <div style="color: #0c2340; font-size: 18px; font-weight: 900; line-height: 1;">T3</div>
   </div>
 
   <a href="ncaa-stats.html#Tournament-Schedule-Scoring" style="text-decoration: none; display: flex; align-items: center; justify-content: center; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #e2e8f0; background: #ffffff;">
