--- a/index.html
+++ b/index.html
@@ -469,7 +469,9 @@
     </div>
   </div>
 
- <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; width: 100%;">
+
+  
+<div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 25px; width: 100%; margin-bottom: 50px;">
     
     <div style="position: relative; transition: transform 0.3s ease; display: block;">
       <a href="https://scoreboard.clippd.com/tournaments/238654/scoring/participants" target="_blank" style="text-decoration: none; display: block;">
