--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -783,7 +783,7 @@
         </thead>
         <tbody style="color: #2d3436;">
 
- <tr>
+<tr>
   <td class="col-left">
     <div style="font-weight: 600; font-size: 13px;">Feb 2-4, 2026</div>
     <div style="display: flex; align-items: center; flex-wrap: wrap; gap: 6px;">
@@ -799,13 +799,13 @@
     <div style="font-size: 12px; color: #7f8c8d;">Iberostar Playa Paraiso - MX | Par 72/6,701 yards</div>
     <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">WAGR Power: TBD / Pts: TBD</div>
     <div class="mobile-status-bar">
-      <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></span></div>
+      <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value" style="font-weight: 800;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></span></div>
       <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">215</span></div>
       <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">E</span></div>
       <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">T3</span></div>
     </div>
   </td>
-  <td class="hide-mobile" style="color: #333;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></td>
+  <td class="hide-mobile" style="color: #333; font-weight: 800;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></td>
   <td class="hide-mobile" style="color: #333;">215</td>
   <td class="hide-mobile" style="color: #333; font-weight: 700;">E</td>
   <td class="hide-mobile" style="color: #333; font-weight: 700;">T3</td>
