--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -800,7 +800,7 @@
     <div style="font-size: 11px; color: #777; font-weight: 700; margin-top: 2px;">WAGR Power: TBD / Pts: TBD</div>
     <div class="mobile-status-bar">
       <div class="ms-item"><span class="ms-label">R1-R2-R3</span><span class="ms-value" style="font-weight: 800;"><span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span></span></div>
-      <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value">215</span></div>
+      <div class="ms-item"><span class="ms-label">TOTAL</span><span class="ms-value" style="font-weight: 800;">215</span></div>
       <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value">E</span></div>
       <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">T3</span></div>
     </div>
