--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       document.getElementById('navLinks').classList.toggle('active');
     }
 
-    window.addEventListener('scroll', function() {
+    window.addtListener('scroll', function() {
       const btn = document.getElementById('fixedTopBtn');
       const header = document.getElementById('mainHeader');
       const currentScrollY = window.pageYOffset;
@@ -544,7 +544,7 @@
         <div style="background: #2c3e50; color: white; padding: 5px 15px; border-radius: 0 0 10px 10px; font-size: 11px; font-weight: 800; position: absolute; top: 0; left: 25px; letter-spacing: 1px; box-shadow: 0 2px 5px rgba(44,62,80,0.2);">RECENT</div>
         
         <h3 style="font-size: 22px; margin: 20px 0 8px 0; color: #0c2340; font-weight: 800; line-height: 1.2;">Compadres Collegiate</h3>
-        <p style="margin: 0; font-weight: 800; font-size: 16px; color: #333; background: #f8f9fa; display: inline-block; padding: 2px 8px; border-radius: 6px;">Score: <span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span> (Even) | T3</p>
+        <p style="margin: 0; font-weight: 800; font-size: 16px; color: #333; background: #f8f9fa; display: inline-block; padding: 2px 8px; border-radius: 6px;">Score: <span style="color: #e11d48;">70</span>-75-<span style="color: #e11d48;">71</span> (E) | T3</p>
         
         <div style="margin-top: 25px; padding-top: 20px; border-top: 1px dashed #eee; color: #444; font-size: 14px; line-height: 1.8;">
           <div style="margin-bottom: 12px; display: flex; align-items: center; gap: 8px;">
