--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1227,14 +1227,14 @@
       <div style="padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7;">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Team Rank (Avg)</span>
         <span style="font-size: 20px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">#1 (72.0)</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Scoreboard Adj: 71.5</div>
-        <div style="display: inline-block; font-size: 12px; color: #806600; margin-top: 8px; font-weight: 700; background: rgba(128, 102, 0, 0.05); padding: 2px 12px; border-radius: 20px;">STATUS: Fall Cumulative</div>
+        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Scoreboard Adj: 71.0</div>
+        <div style="display: inline-block; font-size: 11px; color: #806600; margin-top: 8px; font-weight: 700; background: rgba(128, 102, 0, 0.05); padding: 4px 12px; border-radius: 20px;">STATUS: 가을4경기 포함 5경기 총 15 라운드</div>
       </div>
       <div style="padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7;">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Scoring Power</span>
-        <span style="font-size: 20px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">7 Under Par</span>
-        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Out of 12 Rounds</div>
-        <div style="display: inline-block; font-size: 12px; color: #2b6cb0; margin-top: 8px; font-weight: 700; background: rgba(43, 108, 176, 0.05); padding: 2px 12px; border-radius: 20px;">STATUS: Fall Cumulative</div>
+        <span style="font-size: 20px; font-weight: 900; color: #0c2340; letter-spacing: -0.5px;">9 Under Par</span>
+        <div style="display: block; font-size: 12px; color: #64748b; margin-top: 2px; font-weight: 600;">Out of 15 Rounds</div>
+        <div style="display: inline-block; font-size: 11px; color: #2b6cb0; margin-top: 8px; font-weight: 700; background: rgba(43, 108, 176, 0.05); padding: 4px 12px; border-radius: 20px;">STATUS: 가을4경기 포함 5경기 총 15 라운드</div>
       </div>
       <div style="padding: 20px; background: #f8fafc; border-radius: 15px; text-align: center; border: 1px solid #edf2f7;">
         <span style="display: block; font-size: 11px; color: #64748b; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; margin-bottom: 8px;">Academic Discipline</span>
@@ -1243,6 +1243,7 @@
         <div style="display: inline-block; font-size: 12px; color: #10b981; margin-top: 8px; font-weight: 700; background: rgba(16, 185, 129, 0.05); padding: 2px 12px; border-radius: 20px;">METRIC: Fall Finalized</div>
       </div>
     </div>
+    
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-bottom: 30px;">
       <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
         <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
