--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ gtag('config', 'G-H1JW8YBDZ8');
   <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="focus-container">
     <div style="display: flex; align-items: center; gap: 16px; flex: 1;">
       <div class="focus-badge"><span class="status-dot"></span>CURRENT FOCUS</div>
-      <div style="color: #475569; font-size: 14px; font-weight: 700;">Recalibrating putting touch & driver alignment for Cancun (Travel Squad).</div>
+   <div style="color: #475569; font-size: 14px; font-weight: 700;">Contributing to Team Title: Technical calibration w/ Bryan and academic workload management.</div>
     </div>
     <div class="focus-arrow-svg">
       <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3.5" stroke-linecap="round" stroke-linejoin="round">
